--- a/ExampleCRUDwhitAjax/Views/Home/Index.cshtml
+++ b/ExampleCRUDwhitAjax/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="container mt-5">
-    <h1 class="text-center display-6">Welcome to our Server-Side CRUD Operations example with ASP.NET Core 6, using DataTable and Ajax</h1>
+    <h1 class="text-center display-6">Welcome to our Server-Side Employe CRUD Operations example with ASP.NET Core 6, using DataTable and Ajax</h1>
 
     <div class="mt-10">
         <h1>Here are the points included:</h1>
